# python-defer

./: .gitignore  README.md  pyproject.toml
defer/: __init__.py  _defer.py  defer.py  errors.py
defer/sugar/: __init__.py  _parse.py  transformer.py
defer/sugarfree/: __init__.py
tests/: test_defer.py  test_defer_sugarfree.py
